--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Omikuji</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
@@ -11,18 +12,22 @@
     </header>
     <main>
         <div id="omikuji">
-            <div id="title">
+            <div id="omikujiTitle">
                 おみくじ結果
             </div>
-            <div id="detail">
+            <div id="omikujiDetails">
                 詳細が表示されます
             </div>
+            <div>
+                <img src="./img/omikuji.jpg" id="omikujiImg" alt="おみくじの結果">
+            </div>
             <div class="button-container">
-                <button id="omikuji-button">おみくじを引く</button>
-                <button id="x-button">Xに投稿する</button>
+                <button id="omikujiButton">おみくじを引く</button>
+                <button id="postToXButton">Xにポストする</button>
             </div>
         </div>
 
     </main>
+    <script src="./m-script.js"></script>
 </body>
 </html>
